--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+logging.level.root=INFO
+logging.level.org.springframework.ai=DEBUG
+logging.level.com.gaplo917.demo=DEBUG
+
 spring.application.name=kotlin-spring-ai-graph-search
+spring.ai.ollama.base-url=http://localhost:11434
+
+
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=local_database_only
